# envguard

./: README.md  pyproject.toml
envguard/: cli.py
envguard/scanners/: actions_scanner.py  code_scanner.py  env_scanner.py
tests/: test_actions_scanner.py  test_scanners.py
