[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "envguard"
version = "0.0.1"
description = "Scan source code and GitHub Actions for missing or orphaned env variables and secrets"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "python-dotenv>=1",
    "pyyaml>=6",
]

[project.scripts]
envguard = "envguard.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
