[project]
name = "envguard"
version = "0.0.4"
description = "Scan your codebase for missing or orphaned environment variables"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.scripts]
envguard = "envguard.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]